--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <img src="assets/computer.png" alt="Computador Imagem">
         </div>
         <div class="ai__cards">
-            <div class="ai__card">
+            <div class="ai__card-primario">
                 <h1>UPSCALING</h1>
                 <h3>Aumente seu desempenho em até 200 FPS a mais ao aplicar alguns dos algoritmos de upscaling abaixo:
                 </h3>
@@ -161,9 +161,15 @@
                         <img src="assets/box.png" alt="Caixa">
                         <p>Bicubic CAS</p>
                     </li>
+                </ul>
+            </div>
+            <div class="ai__card-secundario">
+                <h1>FRAME GENERATION</h1>
+                <h3>Eleve a qualidade de seus jogos de 30 FPS para 60 FPS ou de 60 FPS para 120 FPS.</h3>
+                <ul class="card__lista">
                     <li>
                         <img src="assets/box.png" alt="Caixa">
-                        <p>AMD Fidelity Super Resolution</p>
+                        <p>FFFG (FiveFPS Frame Generation)</p>
                     </li>
                 </ul>
             </div>
@@ -209,7 +215,8 @@
     </section>
 
     <section class="container__server">
-        <!-- TODO -->
+        <h1 class="c__server-titulo">VEJA SEU PING APRIMORADO!</h1>
+        <h2 class="c__server-subtitulo">VERIFIQUE SEU PING COM NOSSOS SERVIDORES</h2>
     </section>
 
     <section class="container__more-info">
@@ -233,11 +240,18 @@
     </section>
 
     <section class="container__policy">
-        <!-- TODO -->
+        <img src="./assets/7days.png" alt="">
+
+        <div class="right">
+            <h1>Política de Devolução</h1>
+            <span>Se em até 7 dias da compra do produto, você não estiver satisfeito, basta entrar em contato
+                solicitando o cancelamento e devolução do produto, bem como o reembolso de todo o seu dinheiro, sem
+                qualquer questionamento ou burocracia.</span>
+        </div>
     </section>
 
     <footer>
-        <!-- TODO -->
+        <span>🚀 ©FiveFPS, Brasil, SP - Otimize seu sistema operacional | CNPJ: 46.397.059/0001-66</span>
     </footer>
 </body>
 
