--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <p>Aplique as melhores configurações automaticamente para o desempenho da sua placa gráfica!</p>
         </ul>
     </section>
+
     <div class="line__gray"></div>
 
     <section class="container__ai">
@@ -217,14 +218,142 @@
     <section class="container__server">
         <h1 class="c__server-titulo">VEJA SEU PING APRIMORADO!</h1>
         <h2 class="c__server-subtitulo">VERIFIQUE SEU PING COM NOSSOS SERVIDORES</h2>
+        <div class="server__tabela">
+            <div class="tabela__sao-paulo">
+                <div class="sao-paulo__container">
+                    <img src="assets/flagBrazil.png" alt="Bandeira do Brasil">
+                    <h1>São Paulo</h1>
+                </div>
+                <div class="red-ball__container">
+                    <div class="red-ball"></div>
+                    <h3>(TSP01)</h3>
+                </div>
+            </div>
+            <div class="server-one">
+                <div class="server-one__container">
+                    <img src="assets/serverwithbordersmall.png" alt="Imagem Servidor">
+                    <h1>TSP01-01</h1>
+                    <h3>(tunnel-tsp01-01.fivefps.com)</h3>
+                </div>
+                <h2>1ms</h2>
+            </div>
+            <div class="server-two">
+                <div class="server-two__container">
+                    <img src="assets/serverwithbordersmall.png" alt="Imagem Servidor">
+                    <h1>TSP01-02</h1>
+                    <h3>(tunnel-tsp01-02.fivefps.com)</h3>
+                </div>
+                <h2>1ms</h2>
+            </div>
+            <div class="server-three">
+                <div class="server-three__container">
+                    <img src="assets/serverwithbordersmall.png" alt="Imagem Servidor">
+                    <h1>TSP01-03</h1>
+                    <h3>(tunnel-tsp01-03.fivefps.com)</h3>
+                </div>
+                <h2>1ms</h2>
+            </div>
+            <div class="server-four">
+                <div class="server-four__container">
+                    <img src="assets/serverwithbordersmall.png" alt="Imagem Servidor">
+                    <h1>TSP01-04</h1>
+                    <h3>(tunnel-tsp01-04.fivefps.com)</h3>
+                </div>
+                <h2>1ms</h2>
+            </div>
+            <div class="server-five">
+                <div class="server-five__container">
+                    <img src="assets/serverwithbordersmall.png" alt="Imagem Servidor">
+                    <h1>TSP01-05</h1>
+                    <h3>(tunnel-tsp01-05.fivefps.com)</h3>
+                </div>
+                <h2>1ms</h2>
+            </div>
+            <div class="server-six">
+                <div class="server-six__container">
+                    <img src="assets/serverwithbordersmall.png" alt="Imagem Servidor">
+                    <h1>TSP01-06</h1>
+                    <h3>(tunnel-tsp01-06.fivefps.com)</h3>
+                </div>
+                <h2>1ms</h2>
+            </div>
+        </div>
     </section>
 
     <section class="container__more-info">
-        <!-- TODO -->
+        <div class="more-info__title">
+            <h1 class="red-text">EXPERIMENTE AGORA!</h1>
+            <h2 class="white-text">Com apenas alguns cliques, você será capaz de usar todas nossas otimizações e nossa
+                Inteligência Artificial!</h2>
+        </div>
+
+        <div class="more-info__content">
+            <div class="more-info__container__image">
+                <img src="./assets/cs2-with-perf-overlay.webp" alt="">
+            </div>
+
+            <div class="more-info__container__main">
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/mallet.png" alt="">
+                        </div>
+                        <span>Windows Tweaks</span>
+                    </div>
+                    <p>Aplique diversas otimizações para o seu sistema operacional e para sua placa gráfica!</p>
+                </div>
+
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/ice.png" alt="">
+                        </div>
+                        <span>GPO</span>
+                    </div>
+                    <p>Otimize as threads do seu jogo e congele serviços e aplicações enquanto estiver jogando!</p>
+                </div>
+
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/Brain.png" alt="">
+                        </div>
+                        <span>Frame Generation</span>
+                    </div>
+                    <p>Aplique nossa tecnologia de upscaling e frame generation no seu jogo para duplicar seu FPS!</p>
+                </div>
+
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/monitor.png" alt="">
+                        </div>
+
+                        <span>Overlay</span>
+                    </div>
+
+                    <p>Além disso tudo, utilize nosso overlay de performance para monitorar os recursos do seu PC em
+                        tempo real!</p>
+                </div>
+            </div>
+        </div>
     </section>
 
+    <div class="line__gray"></div>
+
     <section class="container__compatibility">
-        <!-- TODO -->
+        <div class="compatibility__image">
+            <!-- <img src="./assets/AMD.svg" alt=""> -->
+        </div>
+
+        <div class="compatibility__image">
+            <!-- <img src="./assets/nVIDIA.svg" alt=""> -->
+        </div>
+
+        <div class="compatibility__image">
+            <!-- <img src="./assets/IntelPNG.png" alt=""> -->
+        </div>
+        
     </section>
 
     <section class="container__games">
