Checkpoint: Finalizando pagina estatica sem efeitos

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
                 <div class="right__content">
                     <img src="./assets/serverwithborder.png" alt="">
-                    <p>O pacote chega no tunnel do FiveFPS</p>
+                    <p>O pacote chega no tunnel do FIVE.FPS</p>
                 </div>
 
                 <div class="line__no-lag"></div>
@@ -342,41 +342,154 @@
     <div class="line__gray"></div>
 
     <section class="container__compatibility">
-        <div class="compatibility__image">
-            <!-- <img src="./assets/AMD.svg" alt=""> -->
+        <h1 class="red-text">COMPATIBILIDADE</h1>
+        <h2 class="white-text">SUPORTA TODAS AS MARCAS/MODELOS (AMD, INTEL E NVIDIA).</h2>
+        <div class="compatibility__content">
+            <img src="./assets/amd.png" alt="">
+            <img src="./assets/Nvidia.png" alt="">
+            <img src="./assets/intel.png" alt="">
         </div>
-
-        <div class="compatibility__image">
-            <!-- <img src="./assets/nVIDIA.svg" alt=""> -->
-        </div>
-
-        <div class="compatibility__image">
-            <!-- <img src="./assets/IntelPNG.png" alt=""> -->
-        </div>
-        
     </section>
 
+    <div class="line__gray"></div>
+
     <section class="container__games">
-        <!-- TODO -->
+        <h1>OTIMIZE SEUS JOGOS FAVORITOS!</h1>
+        <h2>COM O FIVE.FPS, VOCÊ PODE OTIMIZAR TODOS OS JOGOS INSTALADOS NO SEU COMPUTADOR!</h2>
     </section>
 
     <section class="container__plans">
-        <!-- TODO -->
+        <h1>SEJA PREMIUM</h1>
+        <h2>E DESFRUTE DE TUDO O QUE O FIVEFPS OFERECE</h2>
+        <div class="plans__container-card">
+            <ul class="plans__card-lista">
+                <h2>PREMIUM</h2>
+                <h1>R$ 49,90 <span>/ mês</span>
+                </h1>
+                <p>Descubra um mundo de possibilidades avançadas com o FiveFPS Premium</p>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Computer Specs</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Performance Overlay</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>DynamicSat</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Temp Files Pruner</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>MAF (Mouse Acceleration Fix)</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Unpark CPU</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>GPO</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>CrossHair Overlay</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Windows Tweaks</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Split Tunneling</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Upscaling & Frame Generation</h3>
+                </li>
+                <li>
+                    <img src="assets/checkYellow.svg" alt="Icone Checklist" id="checkYellow">
+                    <h3>Memory Cleaner</h3>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <section class="container__features">
-        <!-- TODO -->
+        <h1 class="red-text">FUNCIONALIDADES</h1>
+        <h2 class="white-text">VEJA TODAS AS FERRAMENTAS DO FIVE.FPS</h2>
+
+        <div class="container__videos">
+            <div class="video">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/kX8T__v_nyg?si=sBEfszoWsHaVfWad"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    class="outline-none"></iframe>
+
+                <div class="red__info">
+                    <span>SPLIT TUNNELING</span>
+                </div>
+            </div>
+            <div class="video">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/79vsIr8xdtI?si=Kaf2UTHL3ZjGr2ny"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    class="outline-none"></iframe>
+
+                <div class="red__info">
+                    <span>GPO</span>
+                </div>
+            </div>
+            <div class="video">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fZ4daAW3zpo?si=NcqdkODTUF6Z_RHG"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    class="outline-none"></iframe>
+
+                <div class="red__info">
+                    <span>DYNAMIC SAT</span>
+                </div>
+            </div>
+            <div class="video">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jhY4gp1-lR8?si=DiLlC_KzWO_q3E9l"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    class="outline-none"></iframe>
+
+                <div class="red__info">
+                    <span>PERFORMANCE OVERLAY</span>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="container__policy">
         <img src="./assets/7days.png" alt="">
 
         <div class="right">
-            <h1>Política de Devolução</h1>
-            <span>Se em até 7 dias da compra do produto, você não estiver satisfeito, basta entrar em contato
-                solicitando o cancelamento e devolução do produto, bem como o reembolso de todo o seu dinheiro, sem
-                qualquer questionamento ou burocracia.</span>
+            <h1 class="white-text">Política de Devolução</h1>
+            <p>Se em até <span class="red-text">7 dias</span> da compra do produto, você não estiver satisfeito, basta
+                entrar em contato
+                solicitando o cancelamento e devolução do produto, bem como o <span class="red-text">reembolso de todo o
+                    seu dinheiro</span>, sem
+                qualquer questionamento ou burocracia.</p>
         </div>
+    </section>
+
+    <section class="container__payments">
+        <div class="payments__flags">
+            <img src="./assets/mastercard.png" alt="" width="50" height="30">
+            <img src="./assets/visa.png" alt="" width="60" height="18">
+            <img src="./assets/pix.png" alt="" width="80" height="28">
+            <img src="./assets/boleto.png" alt="" width="50" height="50">
+            <img src="./assets/paypal.png" alt="" width="80" height="21">
+        </div>
+
+        <img src="assets/secury.png" alt="" width="120" class="secury">
     </section>
 
     <footer>
