Finalizando Estilos Estaticos da Landing Page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <div class="right__content">
                     <img src="./assets/startedpacman.png" alt="">
-                    <p>CAproveite o máximo a sua jogatina!</p>
+                    <p>Aproveite o máximo a sua jogatina!</p>
                 </div>
             </div>
         </div>
@@ -280,83 +280,91 @@
         </div>
     </section>
 
-    <section class="container__more-info">
-        <div class="more-info__title">
-            <h1 class="red-text">EXPERIMENTE AGORA!</h1>
-            <h2 class="white-text">Com apenas alguns cliques, você será capaz de usar todas nossas otimizações e nossa
-                Inteligência Artificial!</h2>
-        </div>
-
-        <div class="more-info__content">
-            <div class="more-info__container__image">
-                <img src="./assets/cs2-with-perf-overlay.webp" alt="">
+    <div class="bg-black">
+        <section class="container__more-info">
+            <div class="more-info__title">
+                <h1 class="red-text">EXPERIMENTE AGORA!</h1>
+                <h2 class="white-text">Com apenas alguns cliques, você será capaz de usar todas nossas otimizações e
+                    nossa
+                    Inteligência Artificial!</h2>
             </div>
 
-            <div class="more-info__container__main">
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/mallet.png" alt="">
-                        </div>
-                        <span>Windows Tweaks</span>
-                    </div>
-                    <p>Aplique diversas otimizações para o seu sistema operacional e para sua placa gráfica!</p>
+            <div class="more-info__content">
+                <div class="more-info__container__image">
+                    <img src="./assets/cs2-with-perf-overlay.webp" alt="">
                 </div>
 
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/ice.png" alt="">
+                <div class="more-info__container__main">
+                    <div class="main__content">
+                        <div class="container-icon">
+                            <div class="icon__more__container">
+                                <img src="./assets/mallet.png" alt="">
+                            </div>
+                            <span>Windows Tweaks</span>
                         </div>
-                        <span>GPO</span>
-                    </div>
-                    <p>Otimize as threads do seu jogo e congele serviços e aplicações enquanto estiver jogando!</p>
-                </div>
-
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/Brain.png" alt="">
-                        </div>
-                        <span>Frame Generation</span>
-                    </div>
-                    <p>Aplique nossa tecnologia de upscaling e frame generation no seu jogo para duplicar seu FPS!</p>
-                </div>
-
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/monitor.png" alt="">
-                        </div>
-
-                        <span>Overlay</span>
+                        <p>Aplique diversas otimizações para o seu sistema operacional e para sua placa gráfica!</p>
                     </div>
 
-                    <p>Além disso tudo, utilize nosso overlay de performance para monitorar os recursos do seu PC em
-                        tempo real!</p>
+                    <div class="main__content">
+                        <div class="container-icon">
+                            <div class="icon__more__container">
+                                <img src="./assets/ice.png" alt="">
+                            </div>
+                            <span>GPO</span>
+                        </div>
+                        <p>Otimize as threads do seu jogo e congele serviços e aplicações enquanto estiver jogando!</p>
+                    </div>
+
+                    <div class="main__content">
+                        <div class="container-icon">
+                            <div class="icon__more__container">
+                                <img src="./assets/Brain.png" alt="">
+                            </div>
+                            <span>Frame Generation</span>
+                        </div>
+                        <p>Aplique nossa tecnologia de upscaling e frame generation no seu jogo para duplicar seu FPS!
+                        </p>
+                    </div>
+
+                    <div class="main__content">
+                        <div class="container-icon">
+                            <div class="icon__more__container">
+                                <img src="./assets/monitor.png" alt="">
+                            </div>
+
+                            <span>Overlay</span>
+                        </div>
+
+                        <p>Além disso tudo, utilize nosso overlay de performance para monitorar os recursos do seu PC em
+                            tempo real!</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <div class="line__gray"></div>
+        <div class="line__gray"></div>
 
-    <section class="container__compatibility">
-        <h1 class="red-text">COMPATIBILIDADE</h1>
-        <h2 class="white-text">SUPORTA TODAS AS MARCAS/MODELOS (AMD, INTEL E NVIDIA).</h2>
-        <div class="compatibility__content">
-            <img src="./assets/amd.png" alt="">
-            <img src="./assets/Nvidia.png" alt="">
-            <img src="./assets/intel.png" alt="">
-        </div>
-    </section>
+        <section class="container__compatibility">
+            <h1 class="red-text">COMPATIBILIDADE</h1>
+            <h2 class="white-text">SUPORTA TODAS AS MARCAS/MODELOS (AMD, INTEL E NVIDIA).</h2>
+            <div class="compatibility__content">
+                <img src="./assets/amd.png" alt="">
+                <img src="./assets/Nvidia.png" alt="">
+                <img src="./assets/intel.png" alt="">
+            </div>
+        </section>
 
-    <div class="line__gray"></div>
+        <div class="line__gray"></div>
 
-    <section class="container__games">
-        <h1>OTIMIZE SEUS JOGOS FAVORITOS!</h1>
-        <h2>COM O FIVE.FPS, VOCÊ PODE OTIMIZAR TODOS OS JOGOS INSTALADOS NO SEU COMPUTADOR!</h2>
-    </section>
+        <section class="container__games">
+            <h1>OTIMIZE SEUS JOGOS FAVORITOS!</h1>
+            <h2>COM O FIVE.FPS, VOCÊ PODE OTIMIZAR TODOS OS JOGOS INSTALADOS NO SEU COMPUTADOR!</h2>
+
+            <div class="container__images__games">
+                <img src="./assets/cardGames.png" alt="">
+            </div>
+        </section>
+    </div>
 
     <section class="container__plans">
         <h1>SEJA PREMIUM</h1>
@@ -416,6 +424,9 @@
                     <h3>Memory Cleaner</h3>
                 </li>
             </ul>
+        </div>
+        <div class="plans__card-btn">
+            <button class="card-btn">OBTENHA AGORA!</button>
         </div>
     </section>
 
