--- a/index.html
+++ b/index.html
@@ -7,45 +7,68 @@
     <title>FiveFPS - Boost your computer's performance with just a few clicks!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/fiveico.svg">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-    <section class="container__hero">
-        <div class="hero__left">
-            <h1>Potencialize Seu Desempenho!</h1>
-
-            <div class="hero__left-li">
-                <div class="hero__left-container">
-                    <img src="assets/fireico.png" alt="Icone de fogo">
-                    <h3>Por que escolher FiveFPS?</h3>
+    <section id="BUY_SECTION" class="relative w-full min-h-[800px] bg-[#FFFFFF] dark:bg-[#111111]"
+        style="background-image: url(&quot;https://i.imgur.com/3gR8GpX.png&quot;); background-size: contain; background-position: left bottom; background-repeat: no-repeat;">
+        <div
+            class="absolute w-full h-full flex flex-wrap flex-row justify-center items-center gap-x-[40px] gap-y-[40px] px-[40px] py-[80px] overflow-hidden">
+            <div class="flex flex-col justify-start items-start gap-y-[20px]">
+                <div class="flex flex-col justify-start items-start gap-y-[10px]">
+                    <p class="md:text-[48px] text-[28px] text-[#4A4A4A] dark:text-[#FFFFFF] font-[700]">Potencialize
+                        Seu Desempenho!</p>
+                    <div>
+                        <div class="flex justify-start items-center gap-x-[5px]"><img width="18" height="18"
+                                src="/assets/fireico.png">
+                            <p class="md:text-[16px] text-[14px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[700]">Por
+                                que escolher o FiveFPS?</p>
+                        </div>
+                        <p
+                            class="max-w-[550px] md:text-[14px] text-[13px] text-[#4A4A4A] dark:text-[#BABABA] font-[400]">
+                            O único app com soluções completas para gamers. Tudo que você precisa, em um só lugar.
+                        </p>
+                    </div>
+                    <div>
+                        <div class="flex justify-start items-center gap-x-[5px]"><img width="18" height="18"
+                                src="/assets/checkico.png">
+                            <p class="md:text-[16px] text-[14px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[700]">
+                                Desempenho Superior:</p>
+                        </div>
+                        <p
+                            class="max-w-[550px] md:text-[14px] text-[13px] text-[#4A4A4A] dark:text-[#BABABA] font-[400]">
+                            Experimente gráficos aprimorados e jogabilidade fluída com nossa tecnologia que utiliza
+                            Inteligência Artificial.</p>
+                    </div>
+                    <div>
+                        <div class="flex justify-start items-center gap-x-[5px]"><img width="18" height="18"
+                                src="/assets/graphicico.png">
+                            <p class="md:text-[16px] text-[14px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[700]">
+                                Jogabilidade Ininterrupta:</p>
+                        </div>
+                        <p
+                            class="max-w-[550px] md:text-[14px] text-[13px] text-[#4A4A4A] dark:text-[#BABABA] font-[400]">
+                            Reduza seu ping em até 50% para jogos online mais rápidos e sem lags com o split
+                            tunneling.</p>
+                    </div>
                 </div>
-
-                <p>O único app com soluções completas para gamers. Tudo que você precisa, em um só lugar.</p>
             </div>
-
-            <div class="hero__left-li">
-                <div class="hero__left-container">
-                    <img src="assets/checkico.png" alt="Icone de fogo">
-                    <h3>Desempenho Superior:</h3>
+            <div class="relative flex justify-center items-center cursor-pointer" style="width: 700px;">
+                <div class="absolute bottom-[-40px] right-[-40px] z-[5]"><img width="170" src="/assets/icohero.png">
                 </div>
-                <p>Experimente gráficos aprimorados e jogabilidade fluída com nossa tecnologia que utiliza Inteligência
-                    Artificial.</p>
-            </div>
-
-            <div class="hero__left-li">
-                <div class="hero__left-container">
-                    <img src="assets/graphicico.png" alt="Icone de fogo">
-                    <h3>Jogabilidade Ininterrupta:</h3>
+                <div class="relative flex justify-center items-center overflow-hidden rounded-[4px] overflow-hidden cursor-pointer"
+                    style="width: 700px;">
+                    <div class="absolute top-[60px] right-[60px]">
+                        <div class="w-[1px] h-[1px] pointer-events-none"
+                            style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 600px 60px;"></div>
+                    </div>
+                    <div class="absolute bottom-[60px] left-[60px]">
+                        <div class="w-[1px] h-[1px] pointer-events-none"
+                            style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 600px 60px;"></div>
+                    </div><img src="https://i.ibb.co/jrb67z5/2-2-0-frame.png">
                 </div>
-                <p>Reduza seu ping em até 50% para jogos online mais rápidos e sem lags com o split tunneling.</p>
             </div>
-
-        </div>
-
-
-        <div class="hero__right">
-            <img src="./assets/fivehero.png" alt="Imagem de Apresentacao" class="first__image">
-            <img src="./assets/icohero.png" alt="" class="second__image">
         </div>
     </section>
 
@@ -175,6 +198,7 @@
                 </ul>
             </div>
         </div>
+        <div class="red-effect" style="x-index"></div>
     </section>
 
     <section class="container__no-lag">
