Tailwind: more-info

--- a/index.html
+++ b/index.html
@@ -268,48 +268,74 @@
                 </ul>
             </div>
         </div>
-        <div class="effect-container">
-            <div class="red-effect"></div>
-        </div>
+        <div class="red-effect"></div>
     </section>
 
-    <section class="container__no-lag">
-        <h1>SPLIT TUNNELING</h1>
-        <h2>ACABE COM O LAG</h2>
-
-        <div class="no-lag__content">
-            <img src="./assets/splitImage.png" alt="" class="started__image-left">
-
-            <div class="started__right">
-                <div class="right__content">
-                    <img src="./assets/pacmanGray.png" alt="">
-                    <p>O jogo envia o pacote</p>
+    <div class=" w-full flex flex-col justify-start items-start gap-y-[40px] px-[15px] md:px-[40px] py-[80px]">
+        <div class="w-full flex flex-col justify-center items-center">
+            <p class="text-[24px] text-[#BD162C] font-[700] text-center">SPLIT TUNNELING</p>
+            <p class="text-[20px] lg:text-[32px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[400] text-center">ACABE COM O
+                LAG</p>
+        </div>
+        <div
+            class="w-full flex flex-col xl:flex-row justify-center items-start gap-y-[50px] xl:gap-x-[50px] px-[50px] xl:px-[0px]">
+            <div class="w-full xl:w-[800px] flex justify-center items-center"><img
+                    src="https://i.imgur.com/1dLzUlJ.png"></div>
+            <div class="h-[456px] flex flex-col justify-start items-start gap-y-[10px]">
+                <div class="flex justify-start items-center gap-x-[20px]">
+                    <div class="w-[64px] h-[64px] flex justify-center items-center rounded-full bg-[#333333]"><svg
+                            stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" width="28"
+                            height="28" color="#FAFAFA" xmlns="http://www.w3.org/2000/svg"
+                            style="color: rgb(250, 250, 250);">
+                            <path
+                                d="M20.937 7.53C19.227 4.119 15.803 2 12 2 6.486 2 2 6.486 2 12s4.486 10 10 10c3.803 0 7.227-2.119 8.937-5.53a1 1 0 0 0-.397-1.316L15.017 12l5.522-3.153c.461-.264.636-.842.398-1.317zm-8.433 3.602a.999.999 0 0 0 0 1.736l6.173 3.525A7.949 7.949 0 0 1 12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8a7.95 7.95 0 0 1 6.677 3.606l-6.173 3.526z">
+                            </path>
+                            <circle cx="11.5" cy="7.5" r="1.5"></circle>
+                        </svg></div>
+                    <p class="flex-1 text-[16px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[500]">O jogo envia o pacote
+                    </p>
                 </div>
-
-                <div class="line__no-lag"></div>
-
-                <div class="right__content">
-                    <img src="./assets/serverwithborder.png" alt="">
-                    <p>O pacote chega no tunnel do FIVE.FPS</p>
+                <div class="w-[31px] flex-1 border-r border-r-[#BD162C]"></div>
+                <div class="flex justify-start items-center gap-x-[20px]">
+                    <div class="w-[64px] h-[64px] flex justify-center items-center rounded-full bg-[#333333]"><svg
+                            stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" width="28"
+                            height="28" color="#FAFAFA" xmlns="http://www.w3.org/2000/svg"
+                            style="color: rgb(250, 250, 250);">
+                            <path
+                                d="M20 3H4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2zM4 9V5h16v4zm16 4H4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2zM4 19v-4h16v4z">
+                            </path>
+                            <path d="M17 6h2v2h-2zm-3 0h2v2h-2zm3 10h2v2h-2zm-3 0h2v2h-2z"></path>
+                        </svg></div>
+                    <p class="flex-1 text-[16px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[500]">O pacote chega no tunnel
+                        do FiveFPS</p>
                 </div>
-
-                <div class="line__no-lag"></div>
-
-                <div class="right__content">
-                    <img src="./assets/serverwithcolor.png" alt="">
-                    <p>O tunnel envia o pacote para o servidor do jogo</p>
+                <div class="w-[31px] flex-1 border-r border-r-[#BD162C]"></div>
+                <div class="flex justify-start items-center gap-x-[20px]">
+                    <div class="w-[64px] h-[64px] flex justify-center items-center rounded-full bg-[#333333]"><svg
+                            stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" width="28"
+                            height="28" color="#FAFAFA" xmlns="http://www.w3.org/2000/svg"
+                            style="color: rgb(250, 250, 250);">
+                            <path
+                                d="M20 3H4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2zm-5 5h-2V6h2zm4 0h-2V6h2zm1 5H4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2zm-5 5h-2v-2h2zm4 0h-2v-2h2z">
+                            </path>
+                        </svg></div>
+                    <p class="flex-1 text-[16px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[500]">O tunnel envia o pacote
+                        para o servidor do jogo</p>
                 </div>
-
-                <div class="line__no-lag"></div>
-
-                <div class="right__content">
-                    <img src="./assets/checkred.png" alt="">
-                    <p>O servidor do jogo recebe seu pacote</p>
+                <div class="w-[31px] flex-1 border-r border-r-[#BD162C]"></div>
+                <div class="flex justify-start items-center gap-x-[20px]">
+                    <div class="w-[64px] h-[64px] flex justify-center items-center rounded-full bg-[#BD162C]"><svg
+                            stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" width="28"
+                            height="28" color="#FAFAFA" xmlns="http://www.w3.org/2000/svg"
+                            style="color: rgb(250, 250, 250);">
+                            <path d="m10 15.586-3.293-3.293-1.414 1.414L10 18.414l9.707-9.707-1.414-1.414z"></path>
+                        </svg></div>
+                    <p class="flex-1 text-[16px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[500]">O servidor do jogo
+                        recebe seu pacote</p>
                 </div>
             </div>
-
         </div>
-    </section>
+    </div>
 
     <section class="container__server">
         <h1 class="c__server-titulo">VEJA SEU PING APRIMORADO!</h1>
@@ -376,91 +402,91 @@
         </div>
     </section>
 
-    <div class="bg-black">
-        <section class="container__more-info">
-            <div class="more-info__title">
-                <h1 class="red-text">EXPERIMENTE AGORA!</h1>
-                <h2 class="white-text">Com apenas alguns cliques, você será capaz de usar todas nossas otimizações e
-                    nossa
-                    Inteligência Artificial!</h2>
+
+    <section class="container__more-info">
+        <div class="more-info__title">
+            <h1 class="red-text">EXPERIMENTE AGORA!</h1>
+            <h2 class="white-text">Com apenas alguns cliques, você será capaz de usar todas nossas otimizações e
+                nossa
+                Inteligência Artificial!</h2>
+        </div>
+
+        <div class="more-info__content">
+            <div class="more-info__container__image">
+                <img src="./assets/cs2-with-perf-overlay.webp" alt="">
             </div>
 
-            <div class="more-info__content">
-                <div class="more-info__container__image">
-                    <img src="./assets/cs2-with-perf-overlay.webp" alt="">
+            <div class="more-info__container__main">
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/mallet.png" alt="">
+                        </div>
+                        <span>Windows Tweaks</span>
+                    </div>
+                    <p>Aplique diversas otimizações para o seu sistema operacional e para sua placa gráfica!</p>
                 </div>
 
-                <div class="more-info__container__main">
-                    <div class="main__content">
-                        <div class="container-icon">
-                            <div class="icon__more__container">
-                                <img src="./assets/mallet.png" alt="">
-                            </div>
-                            <span>Windows Tweaks</span>
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/ice.png" alt="">
                         </div>
-                        <p>Aplique diversas otimizações para o seu sistema operacional e para sua placa gráfica!</p>
+                        <span>GPO</span>
                     </div>
+                    <p>Otimize as threads do seu jogo e congele serviços e aplicações enquanto estiver jogando!</p>
+                </div>
 
-                    <div class="main__content">
-                        <div class="container-icon">
-                            <div class="icon__more__container">
-                                <img src="./assets/ice.png" alt="">
-                            </div>
-                            <span>GPO</span>
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/Brain.png" alt="">
                         </div>
-                        <p>Otimize as threads do seu jogo e congele serviços e aplicações enquanto estiver jogando!</p>
+                        <span>Frame Generation</span>
                     </div>
+                    <p>Aplique nossa tecnologia de upscaling e frame generation no seu jogo para duplicar seu FPS!
+                    </p>
+                </div>
 
-                    <div class="main__content">
-                        <div class="container-icon">
-                            <div class="icon__more__container">
-                                <img src="./assets/Brain.png" alt="">
-                            </div>
-                            <span>Frame Generation</span>
-                        </div>
-                        <p>Aplique nossa tecnologia de upscaling e frame generation no seu jogo para duplicar seu FPS!
-                        </p>
-                    </div>
-
-                    <div class="main__content">
-                        <div class="container-icon">
-                            <div class="icon__more__container">
-                                <img src="./assets/monitor.png" alt="">
-                            </div>
-
-                            <span>Overlay</span>
+                <div class="main__content">
+                    <div class="container-icon">
+                        <div class="icon__more__container">
+                            <img src="./assets/monitor.png" alt="">
                         </div>
 
-                        <p>Além disso tudo, utilize nosso overlay de performance para monitorar os recursos do seu PC em
-                            tempo real!</p>
+                        <span>Overlay</span>
                     </div>
+
+                    <p>Além disso tudo, utilize nosso overlay de performance para monitorar os recursos do seu PC em
+                        tempo real!</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <div class="line__gray"></div>
+    <div class="line__gray"></div>
 
-        <section class="container__compatibility">
-            <h1 class="red-text">COMPATIBILIDADE</h1>
-            <h2 class="white-text">SUPORTA TODAS AS MARCAS/MODELOS (AMD, INTEL E NVIDIA).</h2>
-            <div class="compatibility__content">
-                <img src="./assets/amd.png" alt="">
-                <img src="./assets/Nvidia.png" alt="">
-                <img src="./assets/intel.png" alt="">
-            </div>
-        </section>
+    <section class="container__compatibility">
+        <h1 class="red-text">COMPATIBILIDADE</h1>
+        <h2 class="white-text">SUPORTA TODAS AS MARCAS/MODELOS (AMD, INTEL E NVIDIA).</h2>
+        <div class="compatibility__content">
+            <img src="./assets/amd.png" alt="">
+            <img src="./assets/Nvidia.png" alt="">
+            <img src="./assets/intel.png" alt="">
+        </div>
+    </section>
 
-        <div class="line__gray"></div>
+    <div class="line__gray"></div>
 
-        <section class="container__games">
-            <h1>OTIMIZE SEUS JOGOS FAVORITOS!</h1>
-            <h2>COM O FIVE.FPS, VOCÊ PODE OTIMIZAR TODOS OS JOGOS INSTALADOS NO SEU COMPUTADOR!</h2>
+    <section class="container__games">
+        <h1>OTIMIZE SEUS JOGOS FAVORITOS!</h1>
+        <h2>COM O FIVE.FPS, VOCÊ PODE OTIMIZAR TODOS OS JOGOS INSTALADOS NO SEU COMPUTADOR!</h2>
 
-            <div class="container__images__games">
-                <img src="./assets/cardGames.png" alt="">
-            </div>
-        </section>
-    </div>
+        <div class="container__images__games">
+            <img src="./assets/cardGames.png" alt="">
+        </div>
+    </section>
+
 
     <section class="container__plans">
         <h1>SEJA PREMIUM</h1>
